--- a/cyfractal.html
+++ b/cyfractal.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cymatics Fractal Simulation</title>
+  <title>Cymatics Fractal Simulation with Bouncing Particles</title>
   <style>
     body {
       margin: 0;
@@ -48,8 +48,9 @@
 
     const particles = [];
     const gridSize = 30; // Grid size (total particles: gridSize * gridSize)
-    const centerX = canvas.width / 2;
-    const centerY = canvas.height / 2;
+    const boundarySize = Math.min(canvas.width, canvas.height) * 0.8; // Square boundary size
+    const boundaryX = (canvas.width - boundarySize) / 2; // Left edge of the boundary
+    const boundaryY = (canvas.height - boundarySize) / 2; // Top edge of the boundary
     const colors = ["red", "green", "blue"];
     let isRunning = false;
     let fractalType = "julia";
@@ -57,15 +58,15 @@
     // Initialize particles
     function generateParticles() {
       particles.length = 0;
-      const spacingX = canvas.width / gridSize;
-      const spacingY = canvas.height / gridSize;
+      const spacingX = boundarySize / gridSize;
+      const spacingY = boundarySize / gridSize;
 
       for (let i = 0; i < gridSize; i++) {
         for (let j = 0; j < gridSize; j++) {
           const color = colors[(i + j) % 3];
           particles.push({
-            x: j * spacingX + spacingX / 2,
-            y: i * spacingY + spacingY / 2,
+            x: boundaryX + j * spacingX + spacingX / 2,
+            y: boundaryY + i * spacingY + spacingY / 2,
             vx: 0,
             vy: 0,
             energy: 1,
@@ -92,8 +93,8 @@
     // Update particles based on fractal algorithm
     function updateParticles(time) {
       for (let particle of particles) {
-        const dx = particle.x - centerX;
-        const dy = particle.y - centerY;
+        const dx = particle.x - (boundaryX + boundarySize / 2);
+        const dy = particle.y - (boundaryY + boundarySize / 2);
         const distance = Math.sqrt(dx * dx + dy * dy);
 
         let angle, scale;
@@ -121,6 +122,16 @@
         particle.x += particle.vx;
         particle.y += particle.vy;
 
+        // Reflect particles at boundary edges
+        if (particle.x <= boundaryX || particle.x >= boundaryX + boundarySize) {
+          particle.vx *= -1;
+          particle.x = Math.max(boundaryX, Math.min(particle.x, boundaryX + boundarySize));
+        }
+        if (particle.y <= boundaryY || particle.y >= boundaryY + boundarySize) {
+          particle.vy *= -1;
+          particle.y = Math.max(boundaryY, Math.min(particle.y, boundaryY + boundarySize));
+        }
+
         // Slow down particles
         particle.vx *= 0.98;
         particle.vy *= 0.98;
@@ -142,10 +153,16 @@
       }
     }
 
-    // Draw particles
+    // Draw particles and boundary
     function drawParticles() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
 
+      // Draw boundary
+      ctx.strokeStyle = "white";
+      ctx.lineWidth = 2;
+      ctx.strokeRect(boundaryX, boundaryY, boundarySize, boundarySize);
+
+      // Draw particles
       for (let particle of particles) {
         ctx.fillStyle = particle.color;
         ctx.beginPath();
