--- a/cyfractal.html
+++ b/cyfractal.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cymatics Fractal Simulation with Bouncing Particles</title>
+  <title>Cymatics Fractal with RGB Blending</title>
   <style>
     body {
       margin: 0;
@@ -87,7 +87,17 @@
 
       const [r1, g1, b1] = toRGB(color1);
       const [r2, g2, b2] = toRGB(color2);
-      return `rgb(${Math.min(r1 + r2, 255)}, ${Math.min(g1 + g2, 255)}, ${Math.min(b1 + b2, 255)})`;
+
+      const blendedR = Math.min(r1 + r2, 255);
+      const blendedG = Math.min(g1 + g2, 255);
+      const blendedB = Math.min(b1 + b2, 255);
+
+      // If all RGB values reach maximum, return white
+      if (blendedR === 255 && blendedG === 255 && blendedB === 255) {
+        return "white";
+      }
+
+      return `rgb(${blendedR}, ${blendedG}, ${blendedB})`;
     }
 
     // Update particles based on fractal algorithm
