--- a/cyfractal.html
+++ b/cyfractal.html
@@ -55,7 +55,6 @@
     let isRunning = false;
     let fractalType = "julia";
 
-    // Initialize particles
     function generateParticles() {
       particles.length = 0;
       const spacingX = boundarySize / gridSize;
@@ -71,13 +70,13 @@
             vy: 0,
             energy: 1,
             color: color,
+            originalColor: color, // Track the original color
           });
         }
       }
     }
 
-    // RGB blending function
-    function blendColors(color1, color2) {
+    function blendColors(p1, p2) {
       const toRGB = (color) => {
         if (color === "red") return [255, 0, 0];
         if (color === "green") return [0, 255, 0];
@@ -85,22 +84,20 @@
         return [0, 0, 0];
       };
 
-      const [r1, g1, b1] = toRGB(color1);
-      const [r2, g2, b2] = toRGB(color2);
+      const [r1, g1, b1] = toRGB(p1.color);
+      const [r2, g2, b2] = toRGB(p2.color);
 
       const blendedR = Math.min(r1 + r2, 255);
       const blendedG = Math.min(g1 + g2, 255);
       const blendedB = Math.min(b1 + b2, 255);
 
-      // If all RGB values reach maximum, return white
       if (blendedR === 255 && blendedG === 255 && blendedB === 255) {
-        return "white";
+        return "white"; // Full overlap results in white
       }
 
       return `rgb(${blendedR}, ${blendedG}, ${blendedB})`;
     }
 
-    // Update particles based on fractal algorithm
     function updateParticles(time) {
       for (let particle of particles) {
         const dx = particle.x - (boundaryX + boundarySize / 2);
@@ -109,7 +106,6 @@
 
         let angle, scale;
 
-        // Apply fractal-specific transformations
         if (fractalType === "julia") {
           angle = Math.atan2(dy, dx) + Math.sin(time * 0.001);
           scale = Math.cos(distance * 0.01 + time * 0.001) * 2;
@@ -121,18 +117,14 @@
           scale = 1 + Math.cos(distance * 0.02 - time * 0.001) * 0.5;
         }
 
-        // Update velocities based on fractal pattern
         particle.vx += Math.cos(angle) * scale * particle.energy;
         particle.vy += Math.sin(angle) * scale * particle.energy;
 
-        // Energy dissipation
         particle.energy *= 0.99;
 
-        // Update position
         particle.x += particle.vx;
         particle.y += particle.vy;
 
-        // Reflect particles at boundary edges
         if (particle.x <= boundaryX || particle.x >= boundaryX + boundarySize) {
           particle.vx *= -1;
           particle.x = Math.max(boundaryX, Math.min(particle.x, boundaryX + boundarySize));
@@ -142,37 +134,32 @@
           particle.y = Math.max(boundaryY, Math.min(particle.y, boundaryY + boundarySize));
         }
 
-        // Slow down particles
         particle.vx *= 0.98;
         particle.vy *= 0.98;
       }
 
-      // Apply RGB blending when particles overlap
       for (let i = 0; i < particles.length; i++) {
         for (let j = i + 1; j < particles.length; j++) {
           const p1 = particles[i];
           const p2 = particles[j];
 
-          if (
-            Math.abs(p1.x - p2.x) < 5 &&
-            Math.abs(p1.y - p2.y) < 5
-          ) {
-            p1.color = blendColors(p1.color, p2.color);
+          if (Math.abs(p1.x - p2.x) < 5 && Math.abs(p1.y - p2.y) < 5) {
+            p1.color = blendColors(p1, p2);
+            p2.color = p1.color;
+          } else {
+            p1.color = p1.originalColor;
+            p2.color = p2.originalColor;
           }
         }
       }
     }
 
-    // Draw particles and boundary
     function drawParticles() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-      // Draw boundary
       ctx.strokeStyle = "white";
       ctx.lineWidth = 2;
       ctx.strokeRect(boundaryX, boundaryY, boundarySize, boundarySize);
 
-      // Draw particles
       for (let particle of particles) {
         ctx.fillStyle = particle.color;
         ctx.beginPath();
@@ -181,17 +168,14 @@
       }
     }
 
-    // Animation loop
     function animate(time) {
       if (!isRunning) return;
 
       updateParticles(time);
       drawParticles();
-
       requestAnimationFrame(animate);
     }
 
-    // Event listeners
     document.getElementById("startButton").addEventListener("click", () => {
       if (!isRunning) {
         isRunning = true;
@@ -209,7 +193,6 @@
       fractalType = event.target.value;
     });
 
-    // Initialize particles
     generateParticles();
     drawParticles();
   </script>
