--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
                     <li>🏠 <a href="game13.html">Vulcanos</a></li>
                     <li>🏠 <a href="fracmatics.html">fractal cymaticz</a></li>
                     <li>🏠 <a href="cyfractal.html"> cymaticz fractal </a></li>
+                    <li>🏠 <a href="cymaticsfractalcat.html"> cymaticz fractal categories </a></li>
                         
                 </ul>
             </div>
