--- a/cymaticsfractalcat.html
+++ b/cymaticsfractalcat.html
@@ -127,7 +127,31 @@ function cymaticsFractalPattern(p) {
       p.vx += zx * 0.01;
       p.vy += zy * 0.01;
       break;
-    // Add more fractal algorithms here if needed
+    case 'ifs': // IFS (Barnsley Fern)
+      const choice = Math.random();
+      if (choice < 0.01) {
+        p.x = 0;
+        p.y = 0.16 * p.y;
+      } else if (choice < 0.86) {
+        p.x = 0.85 * p.x + 0.04 * p.y;
+        p.y = -0.04 * p.x + 0.85 * p.y + 1.6;
+      } else if (choice < 0.93) {
+        p.x = 0.2 * p.x - 0.26 * p.y;
+        p.y = 0.23 * p.x + 0.22 * p.y + 1.6;
+      } else {
+        p.x = -0.15 * p.x + 0.28 * p.y;
+        p.y = 0.26 * p.x + 0.24 * p.y + 0.44;
+      }
+      break;
+    case 'random': // Random (Perlin Noise)
+      p.vx += (Math.random() - 0.5) * 0.1;
+      p.vy += (Math.random() - 0.5) * 0.1;
+      break;
+    case 'lsystem': // L-System (Dragon Curve)
+      const angle = Math.random() * Math.PI * 2;
+      p.vx += Math.cos(angle) * 0.05;
+      p.vy += Math.sin(angle) * 0.05;
+      break;
   }
 }
 
