--- a/cymaticsfractalcat.html
+++ b/cymaticsfractalcat.html
@@ -129,19 +129,22 @@ function cymaticsFractalPattern(p) {
       break;
     case 'ifs': // IFS (Barnsley Fern)
       const choice = Math.random();
+      let x = p.x, y = p.y;
       if (choice < 0.01) {
-        p.x = 0;
-        p.y = 0.16 * p.y;
+        x = 0;
+        y = 0.16 * y;
       } else if (choice < 0.86) {
-        p.x = 0.85 * p.x + 0.04 * p.y;
-        p.y = -0.04 * p.x + 0.85 * p.y + 1.6;
+        x = 0.85 * x + 0.04 * y;
+        y = -0.04 * x + 0.85 * y + 1.6;
       } else if (choice < 0.93) {
-        p.x = 0.2 * p.x - 0.26 * p.y;
-        p.y = 0.23 * p.x + 0.22 * p.y + 1.6;
+        x = 0.2 * x - 0.26 * y;
+        y = 0.23 * x + 0.22 * y + 1.6;
       } else {
-        p.x = -0.15 * p.x + 0.28 * p.y;
-        p.y = 0.26 * p.x + 0.24 * p.y + 0.44;
+        x = -0.15 * x + 0.28 * y;
+        y = 0.26 * x + 0.24 * y + 0.44;
       }
+      p.vx += x * 0.01;
+      p.vy += y * 0.01;
       break;
     case 'random': // Random (Perlin Noise)
       p.vx += (Math.random() - 0.5) * 0.1;
@@ -171,26 +174,31 @@ function updateParticles() {
   });
 }
 
-// Render Particles
-function renderParticles() {
+// RGB Blending
+function blendParticles() {
   ctx.clearRect(0, 0, canvas.width, canvas.height);
   ctx.strokeStyle = 'white';
-  ctx.lineWidth = 2;
   ctx.strokeRect(squareBounds.left, squareBounds.top, squareSize, squareSize);
 
-  particles.forEach((p) => {
-    ctx.fillStyle = p.color;
-    ctx.beginPath();
-    ctx.arc(p.x, p.y, 2, 0, Math.PI * 2);
-    ctx.fill();
+  const imgData = ctx.createImageData(canvas.width, canvas.height);
+  particles.forEach(p => {
+    const x = Math.floor(p.x);
+    const y = Math.floor(p.y);
+    const index = (y * canvas.width + x) * 4;
+
+    imgData.data[index] = Math.min(imgData.data[index] + (p.color === 'red' ? 255 : 0), 255);
+    imgData.data[index + 1] = Math.min(imgData.data[index + 1] + (p.color === 'green' ? 255 : 0), 255);
+    imgData.data[index + 2] = Math.min(imgData.data[index + 2] + (p.color === 'blue' ? 255 : 0), 255);
+    imgData.data[index + 3] = 255;
   });
+  ctx.putImageData(imgData, 0, 0);
 }
 
 // Animation Loop
 function animate() {
   if (!running) return;
   updateParticles();
-  renderParticles();
+  blendParticles();
   requestAnimationFrame(animate);
 }
 
@@ -203,16 +211,16 @@ document.getElementById('start').addEventListener('click', () => {
 document.getElementById('reset').addEventListener('click', () => {
   running = false;
   initParticles();
-  renderParticles();
+  blendParticles();
 });
 
 document.getElementById('fractalSelect').addEventListener('change', (e) => {
   fractalType = e.target.value;
-  initParticles();
 });
 
+// Initialize Simulation
 initParticles();
-renderParticles();
+blendParticles();
 </script>
 </body>
 </html>
